@@ -25,7 +25,6 @@ set(USE_LZ4               1)
 set(USE_LZF               1)
 set(USE_LZFX              0) # inefficient
 set(USE_LZG               0) # inefficient
-set(USE_LZHAM             0) # known to cause problems on some platforms
 set(USE_LZMAT             1)
 set(USE_LZO               1)
 set(USE_LZSS_IM           0) # inefficient
@@ -519,7 +518,7 @@ IF(USE_TOR)
     add_definitions(-D_UNICODE -DUNICODE)
 ENDIF(USE_TOR)
 IF(USE_XXHASH)
-    set(OTHER_SRC ${OTHER_SRC} codecs/xxhash.c codecs/xxhash256.c)
+    set(OTHER_SRC ${OTHER_SRC} codecs/xxhash.c)
     add_definitions(-DFSBENCH_USE_XXHASH)
 ENDIF(USE_XXHASH)
 IF(USE_YAPPY)
